Showcase fixes
Fixes to address iFrame.
a.	Removed the link for i18n which was referring cdn website. This had to be downloaded each time. This is now locally added.
b.	High on performance. Earlier you would see flicker in components like dpad etc. This is addressed now, you can no longer see this flicker.
c.	It was too difficult to maintain nav.njk with too much of html code inside for menu links. This has been changed to pick menu from json file.
d.	Few small bugs like – launch page does not have page title etc

Defects fixed:
•	https://crestroneng.atlassian.net/browse/CH5C-2104
•	https://crestroneng.atlassian.net/browse/CH5C-2067

--- a/showcase-app/src/scss/_custom.scss
+++ b/showcase-app/src/scss/_custom.scss
@@ -14,8 +14,12 @@ $headerBorderColor: lightgrey;
   padding: 0.2em 0;
 }
 
+.section-new {
+  padding: 0;
+}
+
 .header-section {
-  padding: 20px 0 40px;
+  padding: 0 0 30px 0;
 }
 
 .content-components-section {
@@ -97,7 +101,6 @@ $headerBorderColor: lightgrey;
     }
   }
 }
-
 
 .logo {
   display: flex;
@@ -424,15 +427,18 @@ body {
 .main {
   margin: 0 auto;
   display: block;
-  height: calc(100% - 60px);
   position: fixed;
   left: 250px;
   top: 60px;
   z-index: 100;
   overflow: scroll;
-  padding: 20px;
   padding-bottom: 50px;
   width: calc(100% - 250px);
+  height: calc(100vh - 60px);
+
+  #content-block-section {
+    padding: 20px;
+  }
 }
 
 .sidebarIconToggle {
@@ -455,15 +461,13 @@ body {
   position: fixed;
   left: 250px;
   width: 250px;
-  margin-top: 60px;
+  margin-top: 36px;
   transform: translateX(-250px);
   transition: transform 250ms ease-in-out;
   border-right: solid 1px $sideMenuBorderColor;
   z-index: 200;
-  overflow: auto;
   background-color: $sideMenuBackgroundColor;
 }
-
 #sidebarMenu::-webkit-scrollbar,
 .side-menu::-webkit-scrollbar {
   /* It does not display the vertical scrollbar. */
@@ -474,11 +478,24 @@ body {
   cursor: pointer;
 }
 
-input[type="checkbox"] {
-  transition: all 0.3s;
-  box-sizing: border-box;
-  display: none;
+.sidebarMenuInner {
+  input[type="checkbox"] {
+    transition: all 0.3s;
+    box-sizing: border-box;
+    display: none;
+  }
+
+  .menu-links {
+    margin-top: 50px;
+    height: calc(100vh - 150px);
+    overflow-y: auto;
+  }
+  .menu-links::-webkit-scrollbar {
+    /* It does not display the vertical scrollbar. */
+    display: none;
+  }
 }
+
 .spinner {
   transition: all 0.3s;
   box-sizing: border-box;
@@ -534,7 +551,6 @@ input[type="checkbox"]:checked ~ .sidebarIconToggle > .diagonal.part-2 {
     pointer-events: all;
   }
   .main {
-    position: relative;
     left: 0;
     width: 100%;
   }
@@ -562,4 +578,24 @@ input[type="checkbox"]:checked ~ .sidebarIconToggle > .diagonal.part-2 {
   .logo-image {
     display: none;
   }
+}
+
+#search-comps {
+  display: block;
+  left: 0;
+  top: 0;
+  padding: 10px;
+  width: 100%;
+  max-width: 100%;
+  box-shadow: none;
+  position: fixed;
+  height: 60px !important;
+  overflow: hidden;
+  z-index: 200;
+  background-color: #f5f5f5;
+  border-bottom: solid 1px #d3d3d3;
+}
+
+.vis-hide {
+  visibility: hidden;
 }
